Fix right arrow icon on safari

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,3 +12,8 @@ button {
   background-color: transparent;
   cursor: not-allowed;
 }
+
+.arrow-right {
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+}
